Added Unit Tests

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,25 @@
 	},
 	"autoload": {
 		"files": [
-			"src/functions/"
-		]
+			"src/functions/file.php",
+			"src/functions/format.php",
+			"src/functions/html.php",
+			"src/functions/number.php",
+			"src/functions/string.php",
+			"src/functions/system.php",
+			"src/functions/url.php",
+			"src/functions/validation.php"
+		],
+		"psr-4": {
+			"Gigadrive\\PHPCommons\\": "src/"
+		}
+	},
+	"autoload-dev": {
+		"psr-4": {
+			"Gigadrive\\PHPCommons\\Tests\\": "tests/"
+		}
+	},
+	"require-dev": {
+		"phpunit/phpunit": "^9.5"
 	}
 }
