Added str_fix_encoding function

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
 		}
 	],
 	"require": {
-		"php": "^7.1 || ^8.0"
+		"php": "^7.1 || ^8.0",
+		"ext-mbstring": "*",
+		"ext-iconv": "*"
 	},
 	"autoload": {
 		"files": [
